--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       attribution: ''
     }).addTo(map);
 
-    const radarLayer = L.tileLayer('https://mesonet.agron.iastate.edu/cache/tile.py/1.0.0/ridge::N0Q-900913/{z}/{x}/{y}.png', {
+    const radarLayer = L.tileLayer('https://mesonet.agron.iastate.edu/cache/tile.py/1.0.0/ridge::N0B-900913/{z}/{x}/{y}.png', {
       tileSize: 256,
       opacity: 0.7
     });
