--- a/index.html
+++ b/index.html
@@ -9,16 +9,10 @@
     html, body {
       height: 100%;
       margin: 0;
-      padding: 0;
     }
-
     #map {
       height: 100vh;
       width: 100vw;
-    }
-
-    .leaflet-control-layers-expanded {
-      font-size: 14px;
     }
   </style>
 </head>
@@ -26,25 +20,65 @@
   <div id="map"></div>
 
   <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"></script>
+  <script src="https://unpkg.com/leaflet-ajax/dist/leaflet.ajax.min.js"></script>
+
   <script>
-    // Initialize map centered on USA
     const map = L.map('map').setView([39.5, -98.35], 5);
 
-    // Add OpenStreetMap base layer
+    // Base layer
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
       attribution: '&copy; OpenStreetMap contributors'
     }).addTo(map);
 
-    // Add RainViewer reflectivity radar
+    // Reflectivity
     const reflectivity = L.tileLayer('https://tilecache.rainviewer.com/v2/radar/0/{z}/{x}/{y}/5/1_1.png', {
-      opacity: 0.65,
-      attribution: 'Radar data © RainViewer',
-      errorTileUrl: ''
+      opacity: 0.6,
+      attribution: 'Radar data © RainViewer'
+    }).addTo(map);
+
+    // Satellite
+    const satellite = L.tileLayer('https://tilecache.rainviewer.com/v2/satellite/0/{z}/{x}/{y}/5/1_1.png', {
+      opacity: 0.4,
+      attribution: 'Satellite imagery © RainViewer'
     });
 
-    map.whenReady(() => {
-      reflectivity.addTo(map);
+    // Lightning
+    const lightning = L.tileLayer('https://tiles.lightningmaps.org/static/tiles/1.0.0/lightning/{z}/{x}/{y}.png', {
+      attribution: 'Lightning data © Blitzortung.org',
+      opacity: 0.8
     });
+
+    // US Weather Alerts from NWS
+    const alerts = new L.GeoJSON.AJAX("https://api.weather.gov/alerts/active?status=actual&message_type=alert", {
+      style: function (feature) {
+        let color = "orange";
+        const event = feature.properties.event.toLowerCase();
+
+        if (event.includes("tornado")) color = "red";
+        else if (event.includes("thunderstorm")) color = "blue";
+        else if (event.includes("flood")) color = "green";
+        else if (event.includes("fire")) color = "darkred";
+        else if (event.includes("wind")) color = "purple";
+
+        return { color: color, weight: 2, fillOpacity: 0.3 };
+      },
+      onEachFeature: function (feature, layer) {
+        const props = feature.properties;
+        const content = `<strong>${props.event}</strong><br>${props.headline}<br><em>${props.areaDesc}</em><br>${props.description}`;
+        layer.bindPopup(content);
+      }
+    });
+
+    alerts.addTo(map);
+
+    const overlays = {
+      "Reflectivity": reflectivity,
+      "Satellite": satellite,
+      "Lightning": lightning,
+      "NWS Alerts": alerts
+    };
+
+    L.control.layers(null, overlays, { collapsed: false }).addTo(map);
   </script>
 </body>
 </html>
