--- a/index.html
+++ b/index.html
@@ -3,45 +3,62 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>StormTracker 13 - Enhanced Radar</title>
+  <title>StormTracker 13 - US Radar Dashboard</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
   <style>
     html, body, #map {
       height: 100%;
       margin: 0;
+      font-family: sans-serif;
     }
 
     #controls {
       position: absolute;
-      bottom: 10px;
+      bottom: 20px;
       left: 50%;
       transform: translateX(-50%);
-      background: rgba(0, 0, 0, 0.6);
+      background: rgba(0, 0, 0, 0.7);
       color: white;
-      padding: 10px 15px;
-      border-radius: 10px;
-      font-family: sans-serif;
-      z-index: 1000;
+      padding: 12px 20px;
+      border-radius: 12px;
+      z-index: 999;
       text-align: center;
+      display: flex;
+      align-items: center;
+      gap: 12px;
     }
 
     #slider {
       width: 300px;
     }
+
+    #playPause {
+      background: #444;
+      color: white;
+      border: none;
+      padding: 6px 12px;
+      border-radius: 6px;
+      cursor: pointer;
+    }
+
+    #timestamp {
+      min-width: 200px;
+    }
   </style>
 </head>
 <body>
   <div id="map"></div>
+
   <div id="controls">
-    <div id="timestamp">Radar loading...</div>
+    <button id="playPause">▶️ Play</button>
     <input type="range" id="slider" min="0" max="0" value="0"/>
+    <div id="timestamp">Loading radar...</div>
   </div>
 
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <script>
     const map = L.map('map').setView([39.5, -98.35], 5);
 
-    // Dark base map for better contrast
     L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png', {
       attribution: '&copy; OpenStreetMap & CartoDB',
       maxZoom: 18
@@ -49,10 +66,13 @@
 
     const slider = document.getElementById('slider');
     const timestampEl = document.getElementById('timestamp');
+    const playPauseBtn = document.getElementById('playPause');
 
     let radarLayers = [];
     let frameTimes = [];
     let currentLayer = null;
+    let playInterval = null;
+    let currentIndex = 0;
 
     function loadRadar() {
       if (currentLayer) {
@@ -66,7 +86,6 @@
         .then(data => {
           const frames = data.radar.past.concat(data.radar.nowcast || []);
           frames.forEach(frame => {
-            // Use high resolution radar tiles (512) and boost opacity
             const tileUrl = `https://tilecache.rainviewer.com/v2/radar/${frame.path}/512/{z}/{x}/{y}/2/1_1.png`;
             const layer = L.tileLayer(tileUrl, { opacity: 0.8 });
             radarLayers.push(layer);
@@ -75,7 +94,8 @@
 
           slider.max = radarLayers.length - 1;
           slider.value = radarLayers.length - 1;
-          showFrame(parseInt(slider.value));
+          currentIndex = radarLayers.length - 1;
+          showFrame(currentIndex);
         });
     }
 
@@ -88,19 +108,42 @@
 
       const time = frameTimes[index];
       timestampEl.textContent = `Radar time: ${time.toLocaleString()}`;
+      slider.value = index;
+      currentIndex = index;
     }
 
+    function playRadar() {
+      playInterval = setInterval(() => {
+        currentIndex = (currentIndex + 1) % radarLayers.length;
+        showFrame(currentIndex);
+      }, 600);
+    }
+
+    function pauseRadar() {
+      clearInterval(playInterval);
+      playInterval = null;
+    }
+
+    playPauseBtn.addEventListener('click', () => {
+      if (playInterval) {
+        pauseRadar();
+        playPauseBtn.textContent = "▶️ Play";
+      } else {
+        playRadar();
+        playPauseBtn.textContent = "⏸️ Pause";
+      }
+    });
+
     slider.addEventListener('input', () => {
+      pauseRadar();
+      playPauseBtn.textContent = "▶️ Play";
       showFrame(parseInt(slider.value));
     });
 
-    // Initial load
     loadRadar();
-
-    // Auto-refresh every 5 minutes
     setInterval(loadRadar, 5 * 60 * 1000);
 
-    // NWS Alerts
+    // 🔶 NWS Alerts - Single Color
     fetch('https://api.weather.gov/alerts/active')
       .then(response => response.json())
       .then(data => {
@@ -108,7 +151,7 @@
           const coords = alert.geometry?.coordinates;
           if (coords) {
             const poly = L.polygon(coords[0].map(pair => [pair[1], pair[0]]), {
-              color: getAlertColor(alert.properties.event),
+              color: "orange",
               fillOpacity: 0.3,
               weight: 2
             }).bindPopup(`<b>${alert.properties.event}</b><br>${alert.properties.headline}`);
@@ -116,16 +159,6 @@
           }
         });
       });
-
-    function getAlertColor(event) {
-      const e = event.toLowerCase();
-      if (e.includes("tornado")) return "red";
-      if (e.includes("thunderstorm")) return "blue";
-      if (e.includes("flood")) return "green";
-      if (e.includes("fire")) return "darkred";
-      if (e.includes("wind")) return "purple";
-      return "orange";
-    }
   </script>
 </body>
 </html>
